<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">gc_test</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_text">Start gc test</string>
    <string name="object_size_desc">object size</string>

     <string-array name="spinner_options">
        <item>int</item>
        <item>byte</item>
        <item>bitmap</item>
        <item>string</item>
        <item>choko</item>
    </string-array>
        <string name="random_removal">random object removal</string>
        <string name="force_gc_chkbox">force gc</string>
        <string name="asc_desc_chkbox">ascending/decsending</string>
    
</resources>
